Fixing card spacing

--- a/app/styles/layout/_card.scss
+++ b/app/styles/layout/_card.scss
@@ -2,7 +2,7 @@
 .cardcont {
   border-radius: 3px;
   width: 100%;
-  height: 575px;
+  height: 570px;
   background: rgba(0, 30, 40, 0.80);
 }
 
@@ -10,7 +10,8 @@
 .poster-container {
   .poster {
     position: relative;
-    width: 100%;
+    width: 111.5%;
+    left: -9.2%;
     border-radius: 0 0 3px 3px;
   }
 }
